manifests/cilium/overlays/homelab/resources/kube-system-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    shared-gateway-access: "true"
