manifests/cilium/overlays/homelab/resources/hubble-ui-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  labels:
    app.kubernetes.io/name: hubble-ui
    app.kubernetes.io/part-of: cilium
    app.kubernetes.io/component: networking
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hubble.nhlabs.org
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: shared-gateway
      sectionName: https
  hostnames:
    - "hubble.nhlabs.org"
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: hubble-ui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
